[package]
name = "dex-archive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
directories = "4.0.1"
eyre = "0.6.8"
reqwest = "0.11.14"
serde = "1.0.152"
signal-hook = "0.3.14"
tokio = "1.24.2"
tracing = "0.1.37"